metadata/force-app/main/default/objects/CustomName_KdUua__c/CustomName_KdUua__c.object-meta.xml
<CustomObject>
    <description>Description_KSVXQ</description>
    <label>CustomLabel_rIFEG</label>
    <nameField>
        <label>CustomLabel_rIFEG</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_rIFEGs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>