metadata/force-app/main/default/objects/CustomName_KdUua__c/fields/CustomField_WojFt__c.field-meta.xml
<CustomField>
    <fullName>CustomField_WojFt__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldKNEaX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>